Simplify deployment package structure

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -31,17 +31,8 @@ jobs:
     
     - name: Prepare deployment package
       run: |
-        # Create a deployment directory
-        mkdir deploy
-        # Copy necessary files
-        cp -r dist deploy/
-        cp -r node_modules deploy/
-        cp server.js deploy/
-        cp package*.json deploy/
-        # Create archive
-        cd deploy
-        zip -r ../app.zip .
-        cd ..
+        # Copy node_modules, dist, server.js, and package files to root
+        zip -r app.zip dist node_modules server.js package.json package-lock.json
     
     - name: Upload artifact
       uses: actions/upload-artifact@v4
